add images for testing

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@
 .idea/
 /coverage/*
 /config/application.yml
-/public/uploads
+# /public/uploads
 # Ignore application configuration
 /config/application.yml
